loopdowhile.Poucet1.scala.error
Compilation error:
Poucet1:1: error: Missing closing brace `}' assumed here
var s = 0;
^Poucet1:23: error: ';' expected but 'while' found.
} while(!exitReached()) 
  ^Poucet1:26: error: 'while' expected but '}' found.
}
^